force-app/main/default/objects/Sensor_Event__c/fields/Modulus_Vector_Length__c.field-meta.xml
<CustomField>
    <fullName>Modulus_Vector_Length__c</fullName>
    <formula>SQRT( X_Number__c  * X_Number__c +  Y_Number__c  *  Y_Number__c  +  Z_Number__c  *  Z_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modulus Vector Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>