force-app/main/default/objects/Sensor_Event__c/fields/X_Number__c.field-meta.xml
<CustomField>
    <fullName>X_Number__c</fullName>
    <label>X Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>