force-app/main/default/objects/Sensor_Event__c/fields/Y_Number__c.field-meta.xml
<CustomField>
    <fullName>Y_Number__c</fullName>
    <label>Y Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>